# MouseBridge

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  bridge.rs  clipboard.rs  config.rs  hotkeys.rs  input.rs  lib.rs  main.rs  network.rs  platform.rs  plugins.rs  service.rs
src/components/: AnalyticsPanel.tsx  ClientMode.tsx  ClipboardPanel.tsx  HotkeysPanel.tsx  ServerMode.tsx  SettingsPanel.tsx
